# logimesh

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.sh  rustfmt.toml
.cargo/: config.toml
docs/: 3593856.3595909.pdf:Zone.Identifier
example-service/: Cargo.toml  README.md
example-service/src/: client.rs  lib.rs  server.rs
examples/: compression.rs  custom_transport.rs  pubsub.rs  readme.rs  readme_expand.rs  sample.rs  simple.rs  simple_expand.rs  tls_over_tcp.rs  tracing.rs
hooks/: pre-commit
logimesh/: Cargo.toml
logimesh-example/: Cargo.toml  README.md
logimesh-example/src/: client.rs  lib.rs  server.rs
logimesh-macro/: Cargo.toml
logimesh-macro/src/: lib.rs
logimesh-macro/tests/: server.rs  service.rs
logimesh/examples/: compression.rs  simple.rs  simple_expand.rs
logimesh/src/: component.rs  lib.rs  trace.rs
logimesh/src/client/: channel.rs  mod.rs
logimesh/src/client/discover/: etcd.rs  fixed.rs  mod.rs
logimesh/src/net/: address.rs  mod.rs  probe.rs
logimesh/src/server/: mod.rs
logimesh/src/transport/: codec.rs  mod.rs
logimesh/src/transport/smux/: connect.rs  mod.rs  stream.rs
lrcall/: Cargo.toml  LICENSE  README.md
lrcall-example/: Cargo.toml  README.md
lrcall-example/src/: client.rs  server.rs
lrcall-macro/: Cargo.toml
lrcall-macro/src/: lib.rs  lib_bak_rs
lrcall-macro/tests/: service.rs
lrcall/examples/: compression.rs  custom_transport.rs  pubsub.rs  readme.rs  sample.rs  sample_expand.rs  tls_over_tcp.rs  tracing.rs
lrcall/src/: cancellations.rs  client.rs  context.rs  lib.rs  serde_transport.rs  server.rs  trace.rs  transport.rs  util.rs
lrcall/src/client/: in_flight_requests.rs  stub.rs
lrcall/src/client/stub/: load_balance.rs  mock.rs  retry.rs
lrcall/src/server/: in_flight_requests.rs  incoming.rs  request_hook.rs  testing.rs
lrcall/src/server/limits/: channels_per_key.rs  requests_per_channel.rs
lrcall/src/server/request_hook/: after.rs  before.rs  before_and_after.rs
lrcall/src/transport/: channel.rs
lrcall/src/util/: serde.rs
lrcall/tests/: dataservice.rs  proc_macro_hygene.rs  service_functional.rs
lrcall/tests/compile_fail/: must_use_request_dispatch.rs  must_use_request_dispatch.stderr  tarpc_service_arg_pat.rs  tarpc_service_arg_pat.stderr  tarpc_service_derive_serde.rs  tarpc_service_derive_serde.stderr  tarpc_service_fn_new.rs  tarpc_service_fn_new.stderr  tarpc_service_fn_serve.rs  tarpc_service_fn_serve.stderr
lrcall/tests/compile_fail/no_serde1/: no_explicit_serde_without_feature.rs  no_explicit_serde_without_feature.stderr  no_implicit_serde_without_feature.rs  no_implicit_serde_without_feature.stderr
lrcall/tests/compile_fail/serde1/: deprecated.rs  deprecated.stderr  incompatible.rs  incompatible.stderr  opt_out_serde.rs  opt_out_serde.stderr
lrcall/tests/compile_fail/serde_transport/: must_use_tcp_connect.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
plugins/tests/: server.rs  service.rs
src/: component.rs  endpoint.rs  lib.rs
src/client/: channel.rs  mod.rs
src/client/balance/: balance.rs  error.rs  mod.rs  random.rs
src/client/discover/: dummy.rs  fixed.rs  mod.rs
src/client/lrcall/: lrcall.rs  mod.rs
src/client/stub/: channel.rs  config.rs  lrcall.rs  mod.rs
src/context/: mod.rs
src/discover/: mod.rs
src/net/: address.rs  mod.rs
src/server/: mod.rs
src/transport/: codec.rs  mod.rs
