[package]
name = "logimesh"
description = "logimesh is a Rust microservice 2.0 framework."
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
lrcall = { workspace = true, features = ["tokio1"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["lrcall", "plugins", "example-service"]
[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Andeya Lee <andeyalee@outlook.com>"]
license = "MIT"
rust-version = "1.80.1"
homepage = "https://github.com/andeya/logimesh"
repository = "https://github.com/andeya/logimesh"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = [
    "rpc",
    "network",
    "server",
    "api",
    "microservices",
    "servicemesh",
    "cloud-native",
]

[workspace.dependencies]

lrcall-plugins = { path = "./plugins" }
lrcall = { path = "./lrcall" }

# all dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.74" }
anyhow = "1.0"
fnv = "1.0"
futures = "0.3"
humantime = "2.0"
pin-project = "1.0"
rand = "0.8"
serde = { version = "1.0" }
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1" }
tokio-util = { version = "0.7.3" }
tokio-serde = { version = "0.9" }
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.25.0" , default-features = false}
opentelemetry = { version = "0.24.0", default-features = false }
opentelemetry-semantic-conventions = "0.16.0"

# only for dev-dependencies
assert-type-eq = "0.1.0"
clap = { version = "4.4.18"}
log = "0.4"
opentelemetry-otlp = "0.17.0"
tracing-subscriber = { version = "0.3"}
opentelemetry_sdk = { version = "0.24.1"}

[profile.dev]
split-debuginfo = "unpacked"
