# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["logimesh", "logimesh-macro", "logimesh-example"]

[workspace.package]
version = "0.1.9"
edition = "2021"
authors = ["Andeya Lee <andeyalee@outlook.com>"]
license = "MIT"
rust-version = "1.80.1"
homepage = "https://github.com/andeya/logimesh"
repository = "https://github.com/andeya/logimesh"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["rpc", "server", "api", "microservices", "servicemesh"]

[workspace.dependencies]

logimesh-macro = { version = "0.1", path = "./logimesh-macro" }
logimesh = { version = "0.1", path = "./logimesh" }

# all dependencies

tarpc = { package = "tarpc-copy", version = "=0.34.0-copy.f81ddd6" }
async-broadcast = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.74"
anyhow = "1.0"
fnv = "1.0"
futures = "0.3.22"
futures-core = "0.3.22"
futures-util = { version = "0.3.22", default-features = false }
pin-project-lite = "0.2.7"
humantime = "2.0"
pin-project = "1.0"
rand = "0.8"
serde = "1.0"
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = "1"
tokio-util = "0.7.3"
tokio-serde = "0.9"
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.25.0", default-features = false }
opentelemetry = { version = "0.24.0", default-features = false }
opentelemetry-semantic-conventions = "0.16.0"
socket2 = "0.5"
metainfo = "0.7"
faststr = "0.2"
dashmap = "6"
assert-type-eq = "0.1.0"
clap = { version = "4.4.18" }
log = "0.4"
opentelemetry-otlp = "0.17.0"
tracing-subscriber = { version = "0.3" }
opentelemetry_sdk = { version = "0.24.1" }
assert_matches = "1.4"
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
flate2 = "1.0"
futures-test = "0.3"
pin-utils = "0.1.0"
serde_bytes = "0.11"
console-subscriber = "0.2"
trybuild = "1.0"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
etcd-client = "0.14"

[profile.dev]
split-debuginfo = "unpacked"
