[package]
name = "lrcall-example-service"
keywords = ["rpc", "network", "server", "microservices", "example"]
readme = "./README.md"
description = "An example server built on lrcall."
documentation = "https://docs.rs/lrcall-example-service"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow = {workspace = true}
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
futures = "0.3"
opentelemetry = { version = "0.24.0" }
opentelemetry-otlp = "0.17.0"
rand = "0.8"
lrcall = { workspace = true, features = ["full"] }
tokio = {workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.16.0"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
