[package]
name = "logimesh-example"
description = "An example server built on logimesh."
documentation = "https://docs.rs/logimesh-example"
keywords.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
logimesh.workspace = true
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { workspace = true }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
