[package]
name = "lrcall-plugins"
description = "lrcall-plugins is Proc macros for lrcall."
readme = "../lrcall/README.md"
keywords = ["rpc", "network", "server", "api", "microservices"]
categories = ["asynchronous", "network-programming"]
authors = [
    "Andeya Lee <andeyalee@outlook.com>",
    "Adam Wright <adam.austin.wright@gmail.com>",
    "Tim Kuehn <timothy.j.kuehn@gmail.com>",
]
license = "MIT"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
assert-type-eq = "0.1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.34", features = ["serde1"] }
