[package]
name = "lrcall-plugins"
description = "lrcall-plugins is Proc macros for lrcall."
readme = "../lrcall/README.md"
keywords = ["rpc", "network", "server", "api", "microservices"]
categories = ["asynchronous", "network-programming"]
authors = [
    "Andeya Lee <andeyalee@outlook.com>",
    "Adam Wright <adam.austin.wright@gmail.com>",
    "Tim Kuehn <timothy.j.kuehn@gmail.com>",
]
license = "MIT"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true , features = ["full", "extra-traits"]}

[lib]
proc-macro = true

[dev-dependencies]
assert-type-eq = {workspace = true}
futures = {workspace = true}
serde = { workspace = true, features = ["derive"] }
lrcall = { workspace = true, features = ["serde1"] }
